tests/fail/d008_missing_main.dew
# D008: missing entry point — no main
42
